# seo_page_pnalyzer

./: .env-example  .gitignore  Dockerfile  Makefile  README.md  database.sql  docker-compose.yml  pyproject.toml  railway.yml  setup.cfg
.github/workflows/: check_test.yml
page_analyzer/: __init__.py  app.py  db.py  db_connect.py  logic_psql.py  main.py  models.py  setting.py  url.py  url_parse.py  utils.py  validator.py
page_analyzer/templates/: base.html  error.html  header.html  index.html  main_page.html  title.html  urls.html  urls_id.html
page_analyzer/utils/: logic_psql.py  url.py
test/: test_app.py
