[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Aliev Nurlan <nualiev420@gmail.com>"]
readme = "README.md"
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^6.0.0"
flask = "^2.2.3"
gunicorn = "^20.1.0"
pytest = "^7.2.2"
psycopg2 = "^2.9.5"
validators = "^0.20.0"
python-dotenv = "^1.0.0"
requests = "^2.29.0"
beautifulsoup4 = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
